Created a working single-server file and added an event-handler for reports to go to the console to the simple user interface. Issues-wise, this should close #24.

--- a/usr-client/ui-simple.html
+++ b/usr-client/ui-simple.html
@@ -25,6 +25,11 @@
 			$('#users').append('<div>' + key + '</div>');
 		});
 	});
+	
+	socket.on('report', function(msg){
+		// Log reports in the console.
+		console.log(msg);
+	});
 
 	// on load of page
 	$(function(){
