Added a CSS class for the server statements to tidy up a bit.

--- a/usr-client/ui-proper.html
+++ b/usr-client/ui-proper.html
@@ -78,6 +78,15 @@ html, body {
 	background-color: #6c6;
 }
 
+.SERVER {
+	width: 50%;
+	margin: 5px 25% 5px 25%;
+	padding: 5px;
+	font-family: 'Georgia';
+	border: 1px solid #000;
+	background-color: #c66;
+}
+
 #document_editor {
 	width: 50%;
 	height: 100%;
