--- a/usr-client/ui-proper.html
+++ b/usr-client/ui-proper.html
@@ -63,28 +63,31 @@ html, body {
 .user { 
 	width: 50%;
 	margin: 5px 0 5px 50%;
-	padding: 5px;
+	padding: 5px 5px 20px 5px;
 	font-family: 'Georgia';
 	border: 1px solid #000;
 	background-color: #66c;
+	position: relative;
 }
 
 .Beth {
 	width: 50%;
 	margin: 5px 50% 5px 0;
-	padding: 5px;
+	padding: 5px 5px 20px 5px;
 	font-family: 'Georgia';
 	border: 1px solid #000;
 	background-color: #6c6;
+	position: relative;
 }
 
 .SERVER {
 	width: 50%;
 	margin: 5px 25% 5px 25%;
-	padding: 5px;
+	padding: 5px 5px 20px 5px;
 	font-family: 'Georgia';
 	border: 1px solid #000;
 	background-color: #c66;
+	position: relative;
 }
 
 #document_editor {
@@ -96,6 +99,15 @@ html, body {
 	right: 0;
 	//float: right;
 	border: 1px solid #000;
+}
+
+.message_time {
+	position: absolute;
+	width: 1px;
+	overflow: hidden;
+	bottom: 0;
+	right: 0;
+	font-size: 8pt;
 }
 </style>
 
@@ -141,7 +153,7 @@ CHATBOT_UI.addToDisplay = CHATBOT_UI.addToDisplay || function (msgObj) {
 		supDiv.className = 'single_msg_container';
 		newDiv = document.createElement('div');
 		newDiv.className = msgObj.auth; /* just go with auth for now; also className may not be cross-browser */
-		newDiv.innerHTML = msgObj.time + " " + msgObj.auth + ": " + msgObj.text;
+		newDiv.innerHTML = "<span class='message_time'>" + msgObj.time + "</span> " + msgObj.auth + ": " + msgObj.text;
 		supDiv.appendChild(newDiv);
 		frag.appendChild(supDiv);
 		document.getElementById('chat_display').appendChild(frag);
