--- a/usr-client/ui-proper.html
+++ b/usr-client/ui-proper.html
@@ -66,7 +66,7 @@ html, body {
 	padding: 5px 5px 20px 5px;
 	font-family: 'Georgia';
 	border: 1px solid #000;
-	background-color: #66c;
+	background-color: #eee;
 	position: relative;
 }
 
@@ -77,6 +77,16 @@ html, body {
 	font-family: 'Georgia';
 	border: 1px solid #000;
 	background-color: #6c6;
+	position: relative;
+}
+
+.Eliza {
+	width: 50%;
+	margin: 5px 50% 5px 0;
+	padding: 5px 5px 20px 5px;
+	font-family: 'Georgia';
+	border: 1px solid #000;
+	background-color: #66c;
 	position: relative;
 }
 
